--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -21,22 +21,24 @@
 
 /* формирование padding секции hero и отступа перед кнопкой*/
 
-.hero__definition {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
-  max-width: 630px;
-  margin-right: auto;
-  margin-left: auto;
-  color: $accent-button-text;
-}
+.hero {
+  &__definition {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    text-align: center;
+    max-width: 630px;
+    margin-right: auto;
+    margin-left: auto;
+    color: $accent-button-text;
+  }
 
-.hero__title {
-  margin-bottom: 30px;
-  font-family: inherit;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+  &__title {
+    margin-bottom: 30px;
+    font-family: inherit;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
 }
